Redesigned stamps view with table

--- a/src/app/shared/accesspoint-details-v2/accesspoint-details-v2-stamps/accesspoint-details-v2-stamps.component.css
+++ b/src/app/shared/accesspoint-details-v2/accesspoint-details-v2-stamps/accesspoint-details-v2-stamps.component.css
@@ -20,6 +20,15 @@ label {
     color: var(--apm-accent);
 }
 
+h4 {
+    color: var(--apm-primary);
+}
+
 .form-check {
     cursor: pointer;
+}
+
+.ssid-compare-click {
+    cursor: pointer;
+    font-style: italic;
 }
