Date formating implementation

--- a/src/app/shared/accesspoint-details-v2/accesspoint-details-v2-details/accesspoint-details-v2-details.component.html
+++ b/src/app/shared/accesspoint-details-v2/accesspoint-details-v2-details/accesspoint-details-v2-details.component.html
@@ -49,12 +49,12 @@
                         <tr>
                             <th scope="row">8</th>
                             <td>Creation timestamp (first seen)</td>
-                            <td>{{ accessPoint.creationTimestamp }}</td>
+                            <td>{{ formatDate(accessPoint.creationTimestamp) }}</td>
                         </tr>
                         <tr>
                             <th scope="row">9</th>
                             <td>Version timestmap (recent run)</td>
-                            <td>{{ accessPoint.versionTimestamp }}</td>
+                            <td>{{ formatDate(accessPoint.versionTimestamp) }}</td>
                         </tr>
                         <tr>
                             <th scope="row">10</th>
