--- a/src/app/shared/accesspoint-details-v2/accesspoint-details-v2-stamps/accesspoint-details-v2-stamps.component.css
+++ b/src/app/shared/accesspoint-details-v2/accesspoint-details-v2-stamps/accesspoint-details-v2-stamps.component.css
@@ -24,7 +24,9 @@ h4 {
     color: var(--apm-primary);
 }
 
-.form-check {
+.form-check,
+.form-check-input,
+.form-check-label {
     cursor: pointer;
 }
 
