--- a/src/app/shared/accesspoint-details-v2/accesspoint-details-v2-general/accesspoint-details-v2-general.component.html
+++ b/src/app/shared/accesspoint-details-v2/accesspoint-details-v2-general/accesspoint-details-v2-general.component.html
@@ -13,7 +13,7 @@
                 <h5 class="my-4"><span class="property-name">Manufacturer: </span> <span class="property-value">{{ accessPoint.manufacturer }}</span></h5>
                 <h5 class="my-4"><span class="property-name">Device type: </span> <span class="property-value">{{ accessPoint.deviceType }}</span></h5>
                 <h5 class="my-4"><span class="property-name">Signal area: </span> <span class="property-value">{{ accessPoint.signalArea }}m<sup>2</sup></span></h5>
-                <h5 class="my-4"><span class="property-name">Frequency: </span> <span class="property-value">{{ accessPoint.frequency }}</span></h5>
+                <h5 class="my-4"><span class="property-name">Frequency: </span> <span class="property-value">{{ accessPoint.frequency === 0 ? 'Unknown' : accessPoint.frequency }}</span></h5>
                 <h5 class="my-4"><span class="property-name">Presence: </span> <span class="property-value">{{ accessPoint.isPresent ? "Present" : "Missing" }}</span></h5>
                 <h5 class="my-4"><span class="property-name">Security: </span> <span [style.color]="getSecurityColor(accessPoint)">{{ getSecurityText(accessPoint) }}</span></h5>
                 <h5 class="my-4"><span class="property-name">Available security standards: </span> <span class="property-value">{{ formatSerialziedArrayData(accessPoint.securityStandards) }}</span></h5>
