Filtering reworked and pagination removed

--- a/src/app/shared/accesspoint-list/accesspoint-list.component.css
+++ b/src/app/shared/accesspoint-list/accesspoint-list.component.css
@@ -2,8 +2,18 @@
     cursor: pointer !important;
 }
 
+.clickable-title {
+    color: var(--apm-primary);
+    font-weight: bold;
+}
+
 .clickable-title:hover {
-    color: var(--apm-primary)
+    color: var(--apm-accent);
+}
+
+.scrollable-table {
+    overflow-y: scroll;
+    height: 82vh;
 }
 
 thead {
