--- a/src/app/shared/accesspoint-list/accesspoint-list.component.html
+++ b/src/app/shared/accesspoint-list/accesspoint-list.component.html
@@ -1,38 +1,44 @@
 <div class="container-fluid">
-    <div class="row justify-content-center mt-3 text-center">
-        <div class="col-lg-5 col-md-12">
+    <div class="row mt-3 mx-2 justify-content-center">
+        <div class="col-lg-4 col-md-12">
             <div class="search-bar-container">
                 <input class="form-control custom-input-filed" type="text" name="searchKeyword" [(ngModel)]="searchKeyword" (ngModelChange)="searchAccessPoints()" placeholder="Search be keyword (ssid, bssid, manufacturer, device type etc.)">
             </div>
         </div>
     </div>
-    <div class="row justify-content-center mt-3">
-        <div class="col-lg-10 col-md-12">
-            <div class="table-responsive">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col" class="col-sortable" (click)="sortAccessPoints('id')"># ↕</th>
-                            <th scope="col" class="col-sortable" (click)="sortAccessPoints('ssid')">SSID ↕</th>
-                            <th scope="col" class="col-sortable" (click)="sortAccessPoints('parsedEncryptionType')">Security ↕</th>
-                            <th scope="col" class="col-sortable" (click)="sortAccessPoints('parsedManufacturer')">Manufacturer ↕</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let ap of enrichedAccessPoints | orderBy: key: reverse | paginate: { itemsPerPage:pageSize, currentPage: page };">
-                            <th scope="row">{{ ap.parsedId }}</th>
-                            <td><span class="clickable-title"(click)="accessPointShowDetails(ap)">{{ ap.ssid }}</span></td>
-                            <td [style.color]="ap.parsedColorValue">{{ ap.parsedEncryptionType }}</td>
-                            <td>{{ ap.parsedManufacturer }}</td>
-                        </tr>
-                    </tbody>
-                </table>
+    
+    <div *ngIf="filteredAccessPoints !== undefined">
+        <div class="row mt-3 mx-2 justify-content-center">
+            <div class="col-12">
+                <div class="scrollable-table">
+                    <table class="table table-hover table-sm">
+                        <thead>
+                            <tr>
+                                <th scope="col" class="col-sortable" (click)="sortAccessPoints('bssid')">BSSID ↕</th>
+                                <th scope="col" class="col-sortable" (click)="sortAccessPoints('ssid')">SSID ↕</th>
+                                <th scope="col" class="col-sortable" (click)="sortAccessPoints('deviceType')">Device type ↕</th>
+                                <th scope="col" class="col-sortable" (click)="sortAccessPoints('creationTimestamp')">Creation timestamp ↕</th>
+                                <th scope="col" class="col-sortable" (click)="sortAccessPoints('isPresent')">Presence ↕</th>
+                                <th scope="col" class="col-sortable" (click)="sortAccessPoints('runIdentifier')">Run id ↕</th>
+                                <th scope="col" class="col-sortable" (click)="sortAccessPoints('simplifiedSecurityStandard')">Security ↕</th>
+                                <th scope="col" class="col-sortable" (click)="sortAccessPoints('manufacturer')">Manufacturer ↕</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let ap of filteredAccessPoints | orderBy: key: reverse">
+                                <td><span class="clickable-title"(click)="accessPointShowDetails(ap)">{{ ap.bssid }}</span></td>
+                                <td>{{ ap.ssid }}</td>
+                                <td>{{ ap.deviceType }}</td>
+                                <td>{{ formatDate(ap.creationTimestamp) }}</td>
+                                <td>{{ ap.isPresent ? 'Present' : 'Missing' }}</td>
+                                <td>{{ ap.runIdentifier ? ap.runIdentifier.substring(0, 6) : 'Unknown' }}</td>
+                                <td [style.color]="getCssSecurityColor(ap)">{{ ap.simplifiedSecurityStandard }}</td>
+                                <td>{{ getManufacturerName(ap) }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="row justify-content-center text-center">
-        <div class="col-lg-5 col-md-12">
-            <pagination-controls (pageChange)="page = $event"></pagination-controls>
         </div>
     </div>
 </div>
