--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -14,6 +14,9 @@
                     <a class="nav-link" routerLink="/list">List</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" routerLink="/run">Run</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" routerLink="/statistics">Statistics</a>
                 </li>
                 <li class="nav-item">
