--- a/src/app/features/main/main.component.html
+++ b/src/app/features/main/main.component.html
@@ -1,3 +1,3 @@
 <app-navbar [animatedBackground]="true"></app-navbar>
 
-<app-accesspoint-map [centerLatitude]="mapCenterLatitude" [centerLongitude]="mapCenterLongitude" [accessPointObservable]="accessPointsObservable" (accessPointClick)="showDetailsClick($event)"></app-accesspoint-map>
+<app-accesspoint-map [identifier]="mapId" [centerLatitude]="mapCenterLatitude" [centerLongitude]="mapCenterLongitude" [accessPointObservable]="accessPointsObservable" (accessPointClick)="showDetailsClick($event)"></app-accesspoint-map>
