--- a/src/app/features/run/run.component.html
+++ b/src/app/features/run/run.component.html
@@ -1,3 +1,3 @@
 <app-navbar></app-navbar>
 
-<p>run works!</p>
+<app-accesspoint-map [identifier]="mapId" [useFilters]="useFilters" [accessPointObservable]="runAccessPoints" (accessPointClick)="showDetailsClick($event)"></app-accesspoint-map>
