Fix: Observable mapping and zipping fix

--- a/src/app/features/run/run.component.html
+++ b/src/app/features/run/run.component.html
@@ -1,11 +1,13 @@
-<app-navbar></app-navbar>
+<app-navbar [animatedBackground]="true"></app-navbar>
 
-<app-accesspoint-map [identifier]="mapId" [useFilters]="useFilters" [accessPointObservable]="runAccessPoints" (accessPointClick)="showDetailsClick($event)"></app-accesspoint-map>
+<div *ngIf="runAccessPoints !== undefined">
+    <app-accesspoint-map [identifier]="mapId" [allowReloading]="allowReloading" [useFilters]="useFilters" [accessPointObservable]="runAccessPoints"></app-accesspoint-map>
+</div>
 
 <div *ngIf="runIdentifiers !== undefined" class="run-selection-container">
     <div class="container-fluid">
         <div class="row justify-content-center my-2">
-            <div class="col-lg-3 col-md-12 px-5 text-center">
+            <div class="col-lg-4 col-md-12 px-5 text-center">
                 <p class="run-selection-form-header">Run</p>
                 <form [formGroup]="runIdentifierForm">
                     <select class="form-select" formControlName="selectedRunId">
