Enh: Client side changes rendering

--- a/src/app/shared/accesspoint-list/accesspoint-list.component.html
+++ b/src/app/shared/accesspoint-list/accesspoint-list.component.html
@@ -8,7 +8,8 @@
         <div class="col-lg-6 col-md-12">
             <div class="manage-buttons-container">
                 <button class="btn btn-primary col-2 mx-1" (click)="deleteAccessPointRange()">Delete</button>
-                <button class="btn btn-primary col-2 mx-1" (click)="changeAccessPointDisplayStatusRange()">Display</button>
+                <button class="btn btn-primary col-2 mx-1" (click)="changeAccessPointDisplayStatusRangeDisplay()">Display</button>
+                <button class="btn btn-primary col-2 mx-1" (click)="changeAccessPointDisplayStatusRangeHide()">Hide</button>
             </div>
         </div>
     </div>
