Fea: CsvGz upload UI implementation

--- a/src/app/features/upload/upload.component.html
+++ b/src/app/features/upload/upload.component.html
@@ -6,7 +6,7 @@
             <div class="upload-section">
                 <h2>Default (.JSON)</h2>
                 <p><em>Vanilla AccessPointMap feature</em></p>
-                <p>Data in JSON format provided by the AccessPointMap scanner mobile application. The application is not currently being developed, but the data format is still compatible.</p>
+                <p>Data in JSON format provided by the AccessPointMap scanner mobile application.</p>
                 <form [formGroup]="defaultUploadForm" (ngSubmit)="submitUploadDefault()">
                     <div>
                         <input class="form-control" type="file" formControlName="file" (change)="assignFileToControlOnChange($event, defaultUploadForm)">
@@ -20,7 +20,7 @@
             <div class="upload-section">
                 <h2>WiGLE (.CSV)</h2>
                 <p><em>Integration version: 1.1.0</em></p>
-                <p>Data in CSV format provided by the WiGLE Wifi mobile application. It is an application of the biggest war-driving platform. The application is very convenient to use.</p>
+                <p>Data in CSV format provided by the WiGLE Wifi mobile application.</p>
                 <form [formGroup]="wigleUploadForm" (ngSubmit)="submitUploadWigle()">
                     <div>
                         <input class="form-control" type="file" formControlName="file" (change)="assignFileToControlOnChange($event, wigleUploadForm)">
@@ -30,17 +30,17 @@
             </div>
         </div>
 
-
         <div class="col-lg-3 col-md-12">
             <div class="upload-section">
-                <h2>Aircrack-ng (.CSV)</h2>
+                <h2>WiGLE (.CSV.GZ)</h2>
                 <p><em>Integration version: 1.1.0</em></p>
-                <p>Data in CSV format provided by the program airodump-ng (Aircrack-ng platform). It is a powerful wireless network audit platform. The collection data is very accurate and detailed.</p>
-                <form [formGroup]="aircrackngUploadForm" (ngSubmit)="submitUploadAircrackng()">
+                <p>Data in CSV.GZ format provided by the WiGLE Wifi mobile application.</p>
+                <form [formGroup]="wigleUploadCsvGzForm" (ngSubmit)="submitUploadWigleCsvGz()">
                     <div>
-                        <input class="form-control" type="file" formControlName="file" (change)="assignFileToControlOnChange($event, aircrackngUploadForm)">
+                        <input class="form-control" type="file" formControlName="file"
+                            (change)="assignFileToControlOnChange($event, wigleUploadCsvGzForm)">
                     </div>
-                    <button type="submit" class="btn btn-primary col-12 mt-3">Upload</button> 
+                    <button type="submit" class="btn btn-primary col-12 mt-3">Upload</button>
                 </form>
             </div>
         </div>
@@ -49,9 +49,24 @@
     <div class="row justify-content-center my-4">
         <div class="col-lg-3 col-md-12">
             <div class="upload-section">
+                <h2>Aircrack-ng (.CSV)</h2>
+                <p><em>Integration version: 1.1.0</em></p>
+                <p>Data in CSV format provided by the program airodump-ng (Aircrack-ng platform).</p>
+                <form [formGroup]="aircrackngUploadForm" (ngSubmit)="submitUploadAircrackng()">
+                    <div>
+                        <input class="form-control" type="file" formControlName="file"
+                            (change)="assignFileToControlOnChange($event, aircrackngUploadForm)">
+                    </div>
+                    <button type="submit" class="btn btn-primary col-12 mt-3">Upload</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-12">
+            <div class="upload-section">
                 <h2>Aircrack-ng (.CAP)</h2>
                 <p><em>Integration version: 1.1.0</em></p>
-                <p>Network frames in CAP format provided by the program airodump-ng (Aircrack-ng platform). It is a powerful wireless network audit platform.</p>
+                <p>Network frames in CAP format provided by the program airodump-ng (Aircrack-ng platform).</p>
                 <form [formGroup]="aircrackngCapUploadForm" (ngSubmit)="submitUploadAircrackngCap()">
                     <div>
                         <input class="form-control" type="file" formControlName="file" (change)="assignFileToControlOnChange($event, defaultUploadForm)">
@@ -65,7 +80,7 @@
             <div class="upload-section">
                 <h2>Wireshark (.PCAP)</h2>
                 <p><em>Integration version: 0.0.0-alpha</em></p>
-                <p>Network frames in PCAP format provided by the Wireshark suite. It is a powerful tool used for advanced network traffic analysis.</p>
+                <p>Network frames in PCAP format provided by the Wireshark suite.</p>
                 <form [formGroup]="wiresharkPcapUploadForm" (ngSubmit)="submitUploadWiresharkPcap()">
                     <div>
                         <input class="form-control" type="file" formControlName="file" (change)="assignFileToControlOnChange($event, defaultUploadForm)">
